CHANGES:


0.7.1 -> 0.7.2
- Fixed a bug that prevented the conversion of full justification
  (Fridrich Strba)
- wpd2foo tools properly detect if a file format is suported
  or not (Marc Maurer)
- Handle unsupported file types other than WordPerfect documents
  (like Macintosh WP2.0 documents) more gracefully (Marc Maurer)
- Added Box Drawing character set mapping (Fridrich Strba)
- Handling of hard spaces and soft hyphens (Fridrich Strba)
- Change in conversion of Deletable Hard/Soft EOL/EOC/EOP
  and handling of some single byte functions that have their
  equivalent in the EOL group (Fridrich Strba)
- Import font names properly on big endian systems (Ted Lemon)
- MSVC compiler switch (Fridrich Strba)
- Some more refactoring, sharing more code between parsers (Marc Maurer)
- Windows versioning: add a BUILDNUMBER (Fridrich Strba)

0.7.0 -> 0.7.1
- Fixes to the multinational character map (Fridrich Strba)
- Fix handling of sub documents, broken by me (William Lachance, Marc Maurer)
- Fix class structure of the WP5 function groups (Marc Maurer)
- Basic page break support for WP4.2 and WP5.x (Marc Maurer)
- README update, to avoid confusing licensing issues (Marc Maurer)

0.6.6 -> 0.7.0
- Basic WP4.2 file format support (Marc Maurer)
- Basic WP5 file format support (Marc Maurer)
- Fix errors in the international character mappings (Fridrich Strba)
- Cleanup file header handling mess (Marc Maurer)
- Removal of stale files (Marc Maurer)
- Several fixes to make libwpd compile on Win32/MSVC (Marc Maurer)
- Make the wpd2text converter use the high level parsing framework
  to support WP4 and WP5 documents as well (Marc Maurer)
- Rework the wpd2raw tool to use the high level parsing framework
  to support WP4 and WP5 documents as well (Marc Maurer)
- Restructure the class hierarchy to allow for code sharing
  between the different high level listeners (Marc Maurer)
- Close open page spans at the end of the document (Marc Maurer)